Fix crash when using a smudge brush

BUG:512243

Test Plan
---------

1. Open document
2. Select the brush in [this bundle](https://bugs.kde.org/attachment.cgi?id=186889)
3. Do a bunch of strokes
4. No crash


(cherry picked from commit 4323f26c2856a5353d631e77ff6ffcf380361544)

ffccd67c Fix crash when using a smudge brush

Co-authored-by: Luna Lovecraft <ciubix8514@gmail.com>